# mcp-odbc

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: config_template.ini  providex.ini  sqlite.ini
src/odbc_mcp/: __init__.py  b1-odbc.py  config.py  odbc.py  server.py
