[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odbc-mcp-server"
version = "0.1.0"
description = "MCP server for ODBC database connections"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "mcp>=0.1.0",
    "pyodbc>=4.0.34",
    "pydantic>=2.0.0",
    "configparser>=5.0.0",
]

[project.scripts]
odbc-mcp-server = "odbc_mcp:main"

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/odbc_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]